// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should change the value on user input 1`] = `
<_default
  value="My initial value"
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value="My initial value"
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value="My initial value"
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should focus the input 1`] = `
<_default
  onFocusChange={[MockFunction]}
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[MockFunction]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should receive the correct value while typing 1`] = `
<_default>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value="foobar"
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should render a multiline input with empty content and react on change 1`] = `
<_default
  multiLine={true}
  value=""
>
  <MultiLineInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    multiLine={true}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <textarea
      className="multiLineInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </MultiLineInput>
</_default>
`;

exports[`<Input /> should render a simple input field 1`] = `
<_default>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should render additional html attributes 1`] = `
<input
  autoComplete="off"
  autoCorrect="off"
  className="simpleInput"
  disabled={false}
  id={null}
  max="2010-01-01"
  min="1970-01-01"
  name={null}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  type="date"
  value=""
/>
`;

exports[`<Input /> should render the input as password 1`] = `
<_default
  password={true}
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={true}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="password"
      value=""
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should render the input with a default value 1`] = `
<_default
  value="FooBar"
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value="FooBar"
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value="FooBar"
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should sanitize the input 1`] = `
<_default
  onSanitize={[Function]}
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value="FOOBAR"
    />
  </SimpleInput>
</_default>
`;

exports[`<Input /> should validate the input 1`] = `
<_default
  onValidate={[Function]}
>
  <SimpleInput
    attributes={null}
    autoComplete={false}
    autoCorrect={false}
    className=""
    disabled={false}
    id={null}
    isControlled={false}
    name={null}
    onChange={[Function]}
    onFocusChange={[Function]}
    onKeyPress={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    validateOnBlur={true}
    value=""
  >
    <input
      autoComplete="off"
      autoCorrect="off"
      className="simpleInput"
      disabled={false}
      id={null}
      name={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
  </SimpleInput>
</_default>
`;
